--- a/styles/styles.css
+++ b/styles/styles.css
@@ -351,5 +351,16 @@ template {
 /* Main styles */
 
 body {
-  background-color: green;
+  background-color: #ccc;
+}
+
+.container {
+  max-width: 500px;
+  width: 100%;
+  margin-inline: auto;
+  padding: 50px 0;
+}
+
+ul {
+  list-style: none;
 }
